--- a/part4/app/static/css/styles.css
+++ b/part4/app/static/css/styles.css
@@ -13,12 +13,15 @@
 body {
     background-color: #f4f4f4;
     color: #333;
+    font-family: 'Roboto', Arial, sans-serif;
+
 }
 
 header {
     background-color: #333;
     color: #fff;
     padding: 1rem;
+    font-family: 'Roboto', Arial, sans-serif;
 }
 
 nav a {
@@ -29,4 +32,24 @@ nav a {
 
 main {
     padding: 2rem;
+}
+
+/* Styles fixes pour les cartes de place et review */
+
+.place-card,
+.review-card {
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+.details-button {
+  background-color: var(--button-bg-color);
+  color: var(--button-text-color);
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
 }
