--- a/part4/app/templates/add_review.html
+++ b/part4/app/templates/add_review.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+      <link rel="icon" type="image/png" href="images/icon.png">
       <img src="image/logo.pgn" alt="HBNB Logo" id="logo" />
       <a href="login.html" class="btn-login" id="login-btn">Login</a>
       <a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
