--- a/part4/app/templates/index.html
+++ b/part4/app/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+      <link rel="icon" type="image/png" href="images/icon.png">
       <img src="image/logo.png" alt="HBNB Logo" id="Logo" />
       <a href="login.html" class="btn-login" id="login-btn">Login</a>
       <a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
@@ -19,7 +20,6 @@
            </ul>			     
         </nav>
 
-    </header>
     <main>
         <section id="filter">
             <label for="price-filter">Max Price:</label>
@@ -27,7 +27,7 @@
                 <!-- Options will be populated dynamically -->
             </select>
         </section>
-        <section id="places-list">
+        <section id="places-list" class="place-card">
             <!-- List of places will be populated dynamically -->
         </section>
     </main>
