--- a/part4/app/templates/index.html
+++ b/part4/app/templates/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Places</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="icon" type="image/png" href="../static/images/icon.png">
 </head>
 <body>
     <header>
-      <link rel="icon" type="image/png" href="images/icon.png">
-      <img src="image/logo.png" alt="HBNB Logo" id="Logo" />
-      <a href="login.html" class="btn-login" id="login-btn">Login</a>
-      <a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
+      <img src="../static/images/logo.png" alt="HBNB Logo" id="Logo" />
+      <div class="auth-buttons">
+      	<a href="login.html" class="btn-login" id="login-btn">Login</a>
+      	<a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
+      </div>
     </header>
 
         <nav>
 	   <ul>
-	     <li><a href="login.html" id="login-link">Login</a><li>
+	     <li><a href="index.html">Accueil</a></li>
            </ul>			     
         </nav>
 
@@ -27,8 +29,17 @@
                 <!-- Options will be populated dynamically -->
             </select>
         </section>
-        <section id="places-list" class="place-card">
-            <!-- List of places will be populated dynamically -->
+        <section id="places-list">
+	   <article class="place-card">
+		   <h2>Maison de charme</h2>
+		   <p>Prix : 100€ / nuit<p>
+		   <button class="details-button">Voir détails</button>
+	   </article>
+	   <article class="place-card">
+		   <h2>Appartement moderne</h2>
+		   <p>Prix : 80€ / nuit</p>
+		   <button class="details-button">Voir détails</button>
+            !-- List of places will be populated dynamically -->
         </section>
     </main>
 
