--- a/part4/app/templates/login.html
+++ b/part4/app/templates/login.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="../static/images/icon.png">
 </head>
 <body>
     <header>
-      <link rel="icon" type="image/png" href="images/icon.png">
-      <img src="images/logo.png" alt="HBNB Logo" id="logo" />
+      <img src="../static/images/logo.png" alt="HBNB Logo" id="logo" />
       <a href="login.html" class="btn-login" id="login-btn">Login</a>
       <a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
 
